Pages creation and design patterns

--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -11,9 +11,12 @@
 </head>
 <body class="bg">
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary flex-row-reverse">
-        @*<a class="navbar-brand flex-row" href="#">CAVA</a>*@
-        <img src="https://picsum.photos/100" />
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        @*<img src="~/Content/images/Icons/CAVA - INDIVIDUAL.png" class="flex-row" style="width:100px;height:80px; align-self:flex-start; border-radius:50px" />*@
+        <a class="nav-link flex-row cava-title" href="#">
+            CAVA
+            <span class="sr-only">(current)</span>
+        </a>
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -21,16 +24,16 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="~/Experience/Index">
                             EXPERIENCIA
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">BAR</a>
+                        <a class="nav-link" href="~/Bar/Index">BAR</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">COCINA</a>
+                        <a class="nav-link" href="~/Kitchen/Index">COCINA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">RESERVAS</a>
