--- a/cava/Content/default.css
+++ b/cava/Content/default.css
@@ -6,16 +6,51 @@
 
 .bg {
     /* The image used */
-    /*background-image: url(images/background.jpg);*/
+    background-image: url(images/IMG_9893.jpg);
     /* Full height */
     height: 100%;
     /* Center and scale the image nicely */
-    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 .navbar{
+    opacity: 0.9;
     /*display:block !important;
     padding: unset !important;*/
+}
+
+/*.active .nav-link {
+    color: white !important;
+}
+
+.nav-link {
+    color: white !important;
+}*/
+
+.cava-title{
+    color:white !important;
+    z-index: 1 !important;
+    position:relative !important;
+    font-family: Broadway !important;
+    font-size: 30px !important;
+    border:initial;
+    border-color:white;
+    border-radius:10px;
+    vertical-align:top;
+}
+
+.custom-container {
+    background-color: #2c3e50;
+    opacity: 1;
+    border-radius: 10px;
+    padding: 5px;
+    margin:5px;
+}
+
+.custom-label{
+    color:white;
+    font-size: 30px;
+    font-family:Arial;
 }
