UI Changes applied

--- a/cava/Views/Bar/Index.cshtml
+++ b/cava/Views/Bar/Index.cshtml
@@ -1,7 +1,53 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-}
+﻿<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<div class="row custom-container">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <img src="~/Content/images/Bar/cava_130.jpg" style="width:100%" />
+    </div>
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
+    </div>
+</div>
 
-<h2>Index</h2>
+<hr />
+<div class="row custom-container">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <img src="~/Content/images/Bar/cava_137.jpg" style="width:100%" />
+    </div>
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
+    </div>
+</div>
+<hr />
+<div class="row custom-container">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <img src="~/Content/images/Bar/cava_158.jpg" style="width:100%" />
+    </div>
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
+    </div>
+</div>
+<hr />
+<div class="row custom-container">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <img src="~/Content/images/Bar/cava_160.jpg" style="width:100%" />
+    </div>
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
+    </div>
+</div>
+<hr />
+<div class="row custom-container">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <img src="~/Content/images/Bar/cava_91.jpg" style="width:100%" />
+    </div>
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
+    </div>
+</div>
 
