--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/Content/default.css">
 </head>
 <body class="bg">
-    <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary flex-row-reverse">
+    <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         @*<img src="~/Content/images/Icons/CAVA - INDIVIDUAL.png" class="flex-row" style="width:100px;height:80px; align-self:flex-start; border-radius:50px" />*@
         <a class="nav-link flex-row cava-title" href="#">
             CAVA
