Bootstrap and jquery updates, besides Reservation Model creation

--- a/cava/Views/Kitchen/Index.cshtml
+++ b/cava/Views/Kitchen/Index.cshtml
@@ -6,47 +6,47 @@
 <br />
 <br />
 <div class="row custom-container">
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-        <img src="~/Content/images/Kitchen/cava_141.jpg" style="width:100%" />
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
+        <img src="~/Content/images/Kitchen/cava_141.jpg" style="width:100%; border-radius:10px" />
     </div>
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
         <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
     </div>
 </div>
 
 <hr />
 <div class="row custom-container">
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-        <img src="~/Content/images/Kitchen/cava_157.jpg" style="width:100%" />
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
+        <img src="~/Content/images/Kitchen/cava_157.jpg" style="width:100%; border-radius:10px" />
     </div>
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
         <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
     </div>
 </div>
 <hr />
 <div class="row custom-container">
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-        <img src="~/Content/images/Kitchen/cava_83.jpg" style="width:100%" />
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
+        <img src="~/Content/images/Kitchen/cava_83.jpg" style="width:100%; border-radius:10px" />
     </div>
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
         <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
     </div>
 </div>
 <hr />
 <div class="row custom-container">
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-        <img src="~/Content/images/Kitchen/cava_86.jpg" style="width:100%" />
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
+        <img src="~/Content/images/Kitchen/cava_86.jpg" style="width:100%; border-radius:10px" />
     </div>
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
         <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
     </div>
 </div>
 <hr />
 <div class="row custom-container">
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-        <img src="~/Content/images/Kitchen/cava_92.jpg" style="width:100%" />
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
+        <img src="~/Content/images/Kitchen/cava_92.jpg" style="width:100%; border-radius:10px" />
     </div>
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
         <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
     </div>
 </div>
