--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -8,53 +8,90 @@
     @Scripts.Render("~/bundles/modernizr")
 
     <link rel="stylesheet" href="~/Content/default.css">
+    <link rel="stylesheet" href="~/Content/bootstrap.css" />
+
+    <script src="~/Scripts/jquery-3.5.1.js"></script>
 </head>
 <body class="bg">
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         @*<img src="~/Content/images/Icons/CAVA - INDIVIDUAL.png" class="flex-row" style="width:100px;height:80px; align-self:flex-start; border-radius:50px" />*@
-        <a class="nav-link flex-row cava-title" href="#">
-            CAVA
-            <span class="sr-only">(current)</span>
-        </a>
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+
+
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="nav-link flex-row cava-title" href="#">
+                CAVA
+                <span class="sr-only">(current)</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarColor01">
+            <div class="collapse navbar-collapse" id="navbarColor02">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="~/Experience/Index">
+                        <a class="nav-link btn btn-primary pl-3 pr-3 mr-1" href="~/Experience/Index">
                             EXPERIENCIA
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="~/Bar/Index">BAR</a>
+                        <a class="nav-link btn btn-primary pl-3 pr-3 mr-1" href="~/Bar/Index">CANTINA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="~/Kitchen/Index">COCINA</a>
+                        <a class="nav-link btn btn-primary pl-3 pr-3 mr-1" href="~/Kitchen/Index">COCINA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">RESERVAS</a>
+                        <a class="nav-link btn btn-danger pl-3 pr-3 mr-1" href="#">RESERVAS</a>
                     </li>
-                    @*<li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                        </div>
-                    </li>*@
                 </ul>
-                @*<form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>*@
             </div>
         </nav>
+
+
+
+
+        @*
+                    <nav class="navbar navbar-expand-lg navbar-dark">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarColor01">
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="~/Experience/Index">
+                                        EXPERIENCIA
+                                        <span class="sr-only">(current)</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="~/Bar/Index">BAR</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="~/Kitchen/Index">COCINA</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">RESERVAS</a>
+                                </li>
+                                @*<li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="#">Something else here</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="#">Separated link</a>
+                                    </div>
+                                </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+            </div>
+            </nav>
+        *@
     </div>
     <div class="container body-content">
         @RenderBody()
@@ -64,8 +101,14 @@
         </footer>
     </div>
 
+    <script>
+        $(document).ready(function () {
+            //alert("Hola");
+        });
+    </script>
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-</body>
+    </body>
 </html>
