Some changes done in different UI and design stuff

--- a/cava/Views/Home/Experience.cshtml
+++ b/cava/Views/Home/Experience.cshtml
@@ -1,13 +1,6 @@
-﻿<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<div class="row custom-container">
+﻿<div class="row card text-white bg-primary">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Kitchen/cava_141.jpg" style="width:100%; border-radius:10px" />
+        <img src="~/Content/images/Experience/IMG_0046_1.jpg" style="width:100%; border-radius:10px" />
     </div>
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
         <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
@@ -15,36 +8,36 @@
 </div>
 
 <hr />
-<div class="row custom-container">
+<div class="row card text-white bg-primary">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Kitchen/cava_157.jpg" style="width:100%; border-radius:10px" />
+        <img src="~/Content/images/Experience/IMG_0085.jpg" style="width:100%; border-radius:10px" />
     </div>
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
         <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
     </div>
 </div>
 <hr />
-<div class="row custom-container">
+<div class="row card text-white bg-primary">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Kitchen/cava_83.jpg" style="width:100%; border-radius:10px" />
+        <img src="~/Content/images/Experience/IMG_0159.jpg" style="width:100%; border-radius:10px" />
     </div>
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
         <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
     </div>
 </div>
 <hr />
-<div class="row custom-container">
+<div class="row card text-white bg-primary">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Kitchen/cava_86.jpg" style="width:100%; border-radius:10px" />
+        <img src="~/Content/images/Experience/IMG_9853.jpg" style="width:100%; border-radius:10px" />
     </div>
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
         <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
     </div>
 </div>
 <hr />
-<div class="row custom-container">
+<div class="row card text-white bg-primary">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Kitchen/cava_92.jpg" style="width:100%; border-radius:10px" />
+        <img src="~/Content/images/Experience/IMG_9992-HDR.jpg" style="width:100%; border-radius:10px" />
     </div>
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
         <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
