--- a/cava/Content/custom.css
+++ b/cava/Content/custom.css
@@ -17,6 +17,7 @@
 
 .navbar{
     opacity: 0.9;
+    width: 100%;
     /*display:block !important;
     padding: unset !important;*/
 }
@@ -48,7 +49,6 @@
     margin:5px;
 }
 
-.custom-label{
-    color:white;
-    font-size: 20px;
+.btn{
+    width: 200px 
 }
