--- a/cava/Views/Home/Experience.cshtml
+++ b/cava/Views/Home/Experience.cshtml
@@ -1,46 +1,71 @@
 ﻿<div class="row card text-white bg-primary">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Experience/IMG_0046_1.jpg" style="width:100%; border-radius:10px" />
+        <img src="~/Content/images/Experience/e1.png" style="width:100%; border-radius:10px" />
     </div>
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
+        <label class="custom-label">
+            <small>
+                UBICADOS ESTRATÉGICAMENTE EN LA ENTRADA DE <b><u>AVENIDA ESCAZÚ</u></b>,
+                SOMOS SIN DUDA EL LUGAR MÁS EXCLUSIVO Y DINÁMICO DE LA ZONA
+            </small>
+        </label>
     </div>
 </div>
 
 <hr />
 <div class="row card text-white bg-primary">
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Experience/IMG_0085.jpg" style="width:100%; border-radius:10px" />
+    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
+        <img src="~/Content/images/Experience/e2.png" style="width:100%; border-radius:10px" />
     </div>
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
+    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3 custom-label">
+        <small>
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <ul>
+                <li>
+                    ESPACIOS EXCLUSIVOS PARA REUNIONES Y CELEBRACIONES
+                </li>
+                <br />
+                <li>
+                    RESERVACIONES CON LÍNEA DIRECTA DE SERVICIO AL CLIENTE
+                </li>
+                <br />
+                <li>
+                    ÁREAS DE CO-WORKING
+                </li>
+                <br />
+                <li>
+                    DJ´S - MÚSICA EN VIVO
+                </li>
+            </ul>
+        </small>
     </div>
 </div>
 <hr />
 <div class="row card text-white bg-primary">
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Experience/IMG_0159.jpg" style="width:100%; border-radius:10px" />
+    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
+        <img src="~/Content/images/Experience/e3.png" style="width:100%; border-radius:10px" />
     </div>
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
-    </div>
-</div>
-<hr />
-<div class="row card text-white bg-primary">
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Experience/IMG_9853.jpg" style="width:100%; border-radius:10px" />
-    </div>
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
-    </div>
-</div>
-<hr />
-<div class="row card text-white bg-primary">
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Experience/IMG_9992-HDR.jpg" style="width:100%; border-radius:10px" />
-    </div>
-    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-        <label class="custom-label">Esta es una pequeña descripción del platillo y la preparación del mismo... Detalles provistos por la administración de CAVA</label>
-    </div>
-</div>
+    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
+        <label class="custom-label">
+            <small>
+                SERVICIOS:
 
+                <uL>
+                    <li>AFTER OFFICE, ALMUERZOS Y CENAS</li>
+                    <li>NOCHES TEMÁTICAS</li>
+                    <li>PRODUCCIÓN DE MATERIAL POP, VIDEOS, ETC.</li>
+                    <li>ANFITRIONES Y ASISTENTE DE PRODUCCIÓN</li>
+                    <li>CATA DE VINOS Y WHISKEY</li>
+                    <li>CHEFS ESTRELLAS INVITADOS</li>
+                    <li>VIAJE GASTRONÓMICO POR EL MUNDO (PAELLA, TACOS, ORIENTAL, MOLECULAR)</li>
+                    <li>TARDES DE BARISMO Y POSTRES</li>
+                    <li>MIXOLOGÍA INTERNACIONAL</li>
+                </uL>
+            </small>
+        </label>
+    </div>
+</div>
