--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="nav-link flex-row cava-title" href="#">
-                CAVA
+                <img src="~/Content/images/Icons/icon2.png" style="height:90px;width:150px;border-radius:20px" />
                 <span class="sr-only">(current)</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,6 +44,8 @@
                         <a id="menu-reservation-id" href="#" class="nav-link btn btn-danger mr-3">RESERVAS</a>
                     </li>
                 </ul>
+
+                <img src="~/Content/images/Icons/icon3.png" style="height:50px;width:110px;border-radius:20px" />
             </div>
         </nav>
     </div>
