--- a/cava/Content/custom.css
+++ b/cava/Content/custom.css
@@ -16,7 +16,7 @@
 }
 
 .navbar{
-    opacity: 0.9;
+    opacity: 0.95;
     width: 100%;
 }
 
@@ -40,7 +40,7 @@
 }
 
 .btn{
-    width: 150px 
+    width: 120px 
 }
 
 .custom-label{
@@ -48,4 +48,9 @@
     font-weight:normal;
     font-size:20px;
     text-align:justify
+}
+
+.center-aligned{
+    text-align:center !important;
+    align-content:center !important;
 }
