--- a/cava/Views/Home/Experience.cshtml
+++ b/cava/Views/Home/Experience.cshtml
@@ -15,57 +15,44 @@
 <hr />
 <div class="row card text-white bg-primary">
     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Experience/e2.png" style="width:100%; border-radius:10px" />
+        <img src="~/Content/images/Experience/e2.png" style="width:100%; height:400px; border-radius:10px" />
     </div>
     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3 custom-label">
         <small>
+
+            ESPACIOS EXCLUSIVOS PARA REUNIONES Y CELEBRACIONES
             <br />
             <br />
+            RESERVACIONES CON LÍNEA DIRECTA DE SERVICIO AL CLIENTE
             <br />
             <br />
+            ÁREAS DE CO-WORKING
             <br />
-            <ul>
-                <li>
-                    ESPACIOS EXCLUSIVOS PARA REUNIONES Y CELEBRACIONES
-                </li>
-                <br />
-                <li>
-                    RESERVACIONES CON LÍNEA DIRECTA DE SERVICIO AL CLIENTE
-                </li>
-                <br />
-                <li>
-                    ÁREAS DE CO-WORKING
-                </li>
-                <br />
-                <li>
-                    DJ´S - MÚSICA EN VIVO
-                </li>
-            </ul>
+            <br />
+            DJ´S - MÚSICA EN VIVO
         </small>
     </div>
 </div>
 <hr />
 <div class="row card text-white bg-primary">
     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
-        <img src="~/Content/images/Experience/e3.png" style="width:100%; border-radius:10px" />
-    </div>
-    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
         <label class="custom-label">
             <small>
                 SERVICIOS:
 
-                <uL>
-                    <li>AFTER OFFICE, ALMUERZOS Y CENAS</li>
-                    <li>NOCHES TEMÁTICAS</li>
-                    <li>PRODUCCIÓN DE MATERIAL POP, VIDEOS, ETC.</li>
-                    <li>ANFITRIONES Y ASISTENTE DE PRODUCCIÓN</li>
-                    <li>CATA DE VINOS Y WHISKEY</li>
-                    <li>CHEFS ESTRELLAS INVITADOS</li>
-                    <li>VIAJE GASTRONÓMICO POR EL MUNDO (PAELLA, TACOS, ORIENTAL, MOLECULAR)</li>
-                    <li>TARDES DE BARISMO Y POSTRES</li>
-                    <li>MIXOLOGÍA INTERNACIONAL</li>
-                </uL>
+                AFTER OFFICE, ALMUERZOS Y CENAS<br /><br />
+                NOCHES TEMÁTICAS<br /><br />
+                PRODUCCIÓN DE MATERIAL POP, VIDEOS, ETC.<br /><br />
+                ANFITRIONES Y ASISTENTE DE PRODUCCIÓN<br /><br />
+                CATA DE VINOS Y WHISKEY<br /><br />
+                CHEFS ESTRELLAS INVITADOS<br /><br />
+                VIAJE GASTRONÓMICO POR EL MUNDO (PAELLA, TACOS, ORIENTAL, MOLECULAR)<br /><br />
+                TARDES DE BARISMO Y POSTRES<br /><br />
+                MIXOLOGÍA INTERNACIONAL<br /><br />
             </small>
         </label>
+    </div>
+    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 mt-3">
+        <img src="~/Content/images/Experience/e3.png" style="width:100%; height:400px; border-radius:10px" />
     </div>
 </div>
