--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -49,24 +49,24 @@
                     </div>
                 </div>
                 @*<ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a id="menu-experience-id" class="nav-link btn btn-primary mr-3">
-                            EXPERIENCIAS
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="menu-bar-id" href="#" class="nav-link btn btn-primary mr-3">MIXOLOGÍA</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="menu-kitchen-id" href="#" class="nav-link btn btn-primary mr-3">GASTRONOMÍA</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="menu-reservation-id" href="#" class="nav-link btn btn-danger mr-3">RESERVAS</a>
-                    </li>
-                </ul>
+                        <li class="nav-item active">
+                            <a id="menu-experience-id" class="nav-link btn btn-primary mr-3">
+                                EXPERIENCIAS
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="menu-bar-id" href="#" class="nav-link btn btn-primary mr-3">MIXOLOGÍA</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="menu-kitchen-id" href="#" class="nav-link btn btn-primary mr-3">GASTRONOMÍA</a>
+                        </li>
+                        <li class="nav-item">
+                            <a id="menu-reservation-id" href="#" class="nav-link btn btn-danger mr-3">RESERVAS</a>
+                        </li>
+                    </ul>
 
-                <img src="~/Content/images/Icons/icon3.png" style="height:50px;width:110px;border-radius:20px" />*@
+                    <img src="~/Content/images/Icons/icon3.png" style="height:50px;width:110px;border-radius:20px" />*@
             </div>
         </nav>
     </div>
@@ -76,9 +76,11 @@
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
-    </div>  
+    </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+    <script src="~/Scripts/notify.js"></script>
 </body>
 </html>
