--- a/cava/Views/Home/Reservation.cshtml
+++ b/cava/Views/Home/Reservation.cshtml
@@ -14,13 +14,13 @@
     </div>
     <div class="card row pb-5 pt-4">
         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 mt-3">
-            <input id="txt-people-amount" type="number" class="form-control ml-md-3 d-flex" min="1" max="20" value="" placeholder="NÚMERO DE PERSONAS" />
+            <input id="txt-people-amount" type="number" class="form-control d-flex col" min="1" max="20" value="" placeholder="NÚMERO DE PERSONAS" />
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 mt-3">
-            <input id="txt-reservation-date" type="datetime" class="form-control custom-date" value="" placeholder="FECHA DE RESERVACIÓN" />
+            <input id="txt-reservation-date" type="datetime" class="form-control custom-date col" value="" placeholder="FECHA DE RESERVACIÓN" />
         </div>
         <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mt-3">
-            <button id="btn-reservation-1" type="button" class="btn btn-info float-right mr-4">CONTINUAR</button>
+            <button id="btn-reservation-1" type="button" class="btn btn-info float-right w-100">CONTINUAR</button>
         </div>
     </div>
 
@@ -28,37 +28,37 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="card no-flex">
-                    <div class="row pb-3 pl-3">
+                    <div class="row pb-3 pl-3 pr-3">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 mt-3">
-                            <span class="bi bi-calendar pr-3"></span><label id="lbl-reservation-date" class="col-form-label white-label"></label>
+                            <span class="bi bi-calendar pr-3"><br class="d-sm-none" /></span><label id="lbl-reservation-date" class="col-form-label white-label"></label>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 mt-3">
-                            <span class="bi bi-alarm pr-3"></span><label id="lbl-reservation-time" class="col-form-label white-label"></label>
+                            <span class="bi bi-alarm pr-3"><br class="d-sm-none" /></span><label id="lbl-reservation-time" class="col-form-label white-label"></label>
                         </div>
                     </div>
                     <hr class="custom-hr" />
-                    <div class="row pb-3 pl-3">
+                    <div class="row pb-3 pl-3 pr-3">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
-                            <input type="text" class="form-control" id="txt-name" value="" placeholder="NOMBRE" />
+                            <input type="text" class="form-control col pr-5" id="txt-name" value="" placeholder="NOMBRE" />
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3 pl-md-0 pr-md-3">
-                            <input type="text" class="form-control" id="txt-last-names" value="" placeholder="APELLIDOS" />
+                            <input type="text" class="form-control col" id="txt-last-names" value="" placeholder="APELLIDOS" />
                         </div>
                     </div>
-                    <div class="row pb-3 pl-3">
+                    <div class="row pb-3 pl-3 pr-3">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
-                            <input type="text" class="form-control" id="txt-email" value="" placeholder="CORREO ELECTRÓNICO" />
+                            <input type="text" class="form-control col" id="txt-email" value="" placeholder="CORREO ELECTRÓNICO" />
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3 pl-md-0">
-                            <input type="text" class="form-control" id="txt-phone" value="" placeholder="TELÉFONO" />
+                            <input type="text" class="form-control col" id="txt-phone" value="" placeholder="TELÉFONO" />
                         </div>
                     </div>
-                    <div class="row pb-3 pl-3">
+                    <div class="row pb-3 pl-3 pr-3">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
-                            <input id="btn-cancel-reservation" type="button" value="CANCELAR" class="btn w-100 btn-danger" />
+                            <input id="btn-cancel-reservation" type="button" value="CANCELAR" class="btn btn-danger w-100" />
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
-                            <input id="btn-confirm-reservation" type="button" value="CONFIRMAR RESERVCIÓN" class="btn w-100 btn-info" />
+                            <input id="btn-confirm-reservation" type="button" value="CONFIRMAR RESERVCIÓN" class="btn btn-info w-100" />
                         </div>
                     </div>
                 </div>
