--- a/cava/Views/Home/Reservation.cshtml
+++ b/cava/Views/Home/Reservation.cshtml
@@ -14,7 +14,7 @@
     </div>
     <div class="card row pb-5 pt-4">
         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 mt-3">
-            <input id="txt-people-amount" type="number" class="form-control d-flex col" min="1" max="20" value="" placeholder="NÚMERO DE PERSONAS" />
+            <input id="txt-people-amount" type="number" pattern="\d*" class="form-control d-flex col" min="1" max="20" value="" placeholder="NÚMERO DE PERSONAS" />
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 mt-3">
             <input id="txt-reservation-date" type="datetime" class="form-control custom-date col" value="" placeholder="FECHA DE RESERVACIÓN" />
