--- a/cava/Views/Home/Reservation.cshtml
+++ b/cava/Views/Home/Reservation.cshtml
@@ -58,7 +58,7 @@
                             <input id="btn-cancel-reservation" type="button" value="CANCELAR" class="btn btn-danger w-100" />
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
-                            <input id="btn-confirm-reservation" type="button" value="CONFIRMAR RESERVCIÓN" class="btn btn-info w-100" />
+                            <button id="btn-confirm-reservation" type="button" class="btn btn-info float-right w-100">CONFIRMAR RESERVCIÓN</button>
                         </div>
                     </div>
                 </div>
@@ -66,11 +66,6 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
 
 <link rel="stylesheet" href="~/Content/jquery.datetimepicker.css" />
 <script src="~/Scripts/jquery.datetimepicker.full.js"></script>
