--- a/cava/Views/Home/Index.cshtml
+++ b/cava/Views/Home/Index.cshtml
@@ -7,7 +7,6 @@
 <br />
 <br />
 <br />
-<br />
-<div id="main-container" class="m-3">
+<div id="main-container" class="device-height p-3" style="overflow-y:auto;overflow-x:hidden">
     @Html.Partial("Experience")
 </div>
