--- a/cava/Content/custom.css
+++ b/cava/Content/custom.css
@@ -89,13 +89,61 @@
     margin-right: 0px !important;
 }
 
-.btn-small{
-    height:30px;
-    width:30px;
-    color:white !important;
-    vertical-align:central !important;
+.btn-small {
+    height: 30px;
+    width: 30px;
+    color: white !important;
+    vertical-align: central !important;
 }
 
-.no-max-width{
-    max-width:none;
+.no-max-width {
+    max-width: none;
+}
+
+@media only screen and (min-width: 2559px) and (max-width:2561px){
+    .device-height {
+        height: 900px
+    }
+}
+
+@media only screen and (min-width: 1440px) and (max-width:2559px) {
+    .device-height {
+        height: 700px
+    }
+}
+
+@media only screen and (min-width: 1024px) and (max-width:1440px) {
+    .device-height {
+        height: 600px
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width:1024px) {
+    .device-height {
+        height: 600px
+    }
+}
+
+@media only screen and (min-width: 320px) and (max-width:768px) {
+    .device-height {
+        height: 500px
+    }
+}
+/*
+@media only screen and (min-width: 320px) and (max-device-with: 425px) {
+    .device-height {
+        height: 700px
+    }
+}*/
+
+@media (orientation: landscape) {
+    body {
+        flex-direction: row;
+    }
+}
+
+@media (orientation: portrait) {
+    body {
+        flex-direction: row;
+    }
 }
