--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <title>@ViewBag.Title - Cava</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -15,7 +16,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
-<body class="bg" style="overflow-y:scroll">
+<body class="bg" style="overflow-y:hidden">
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="nav-link flex-row cava-title" href="#">
@@ -58,7 +59,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - cava.com</p>
+            <p class="white-label float-right">&copy; @DateTime.Now.Year - cava.com</p>
         </footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
